--- a/index.html
+++ b/index.html
@@ -1,11 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/stylem.css">
+
 </head>
+
 <body>
-    
+    <header>
+        <!-- BARRA NAVEGACION -->
+        <!-- Le agrego el modo oscuro. -->
+        <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+            <div class="container-fluid">
+
+                <!-- ICONO -->
+                <a class="navbar-brand" href="#">
+                    <img src="./img/amazing_brand.png" alt="logo marca" width="130" height="32">
+                </a>
+
+                <!-- Boton Collapse -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Agrego justify-content-end para llevar los botones a la izquierda-->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link BT" href="#">UPCOMING EVENTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PAST EVENTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">STATS</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- CARRUSEL -->
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <!-- Botones bajos del carrusel -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+            </div>
+
+            <!-- imagenes del carrusel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active ">
+                    <img src="./img/optional_banner_1.jpg" class="d-block w-100" alt="Imagen comida">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>HOME</h2>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/optional_banner_2.jpg" class="d-block w-100" alt="Imagen cine">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>HOME</h2>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/optional_banner_3.jpg" class="d-block w-100" alt="Imagen terminal">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>HOME</h2>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/optional_banner_4.jpg" class="d-block w-100" alt="Imagen fiesta">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>HOME</h2>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/optional_banner_5.jpg" class="d-block w-100" alt="Imagen concierto">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>HOME</h2>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Botones next y previous del carrusel. -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
+
+    <main>
+
+        <!-- BARRA DE BUSQUEDA -->
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="ms-3">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="categoria" value="categoria">
+                        <label class="form-check-label" for="categorua">Categoría</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="genero" value="genero">
+                        <label class="form-check-label" for="genero">Genero</label>
+                    </div>
+
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="filtro3" value="filtro3">
+                        <label class="form-check-label" for="filtro3">Filtro 3</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="filtro4" value="filtro4">
+                        <label class="form-check-label" for="filtro4">Filtro 4</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="filtro5" value="filtro5">
+                        <label class="form-check-label" for="filtro5">Filtro 5</label>
+                    </div>
+                </div>
+                <form class="d-flex me-4" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+
+        </nav>
+
+
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
