--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link active" aria-current="page" href="#">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link BT" href="#">UPCOMING EVENTS</a>
+                            <a class="nav-link" href="#">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">PAST EVENTS</a>
@@ -120,7 +120,7 @@
     <main>
 
         <!-- BARRA DE BUSQUEDA -->
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar bg-dark  text-white">
             <div class="container-fluid">
                 <div class="ms-3">
                     <div class="form-check form-check-inline">
@@ -152,8 +152,83 @@
 
         </nav>
 
+        <!-- CARDS -->
+        <div class="container mt-4 mb-4">
+            <div class="row justify-content-around">
+
+                <!-- Card 1 -->
+                <div class="card" style="width: 18rem;">
+                    <img src="./img/books.jpg" class="card-img-top" alt="Libros">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Libros</h5>
+                        <p class="card-text">Descripcion de los Libros. Descripcion de los Libros. Descripcion de los
+                            Libros</p>
+                        <div class="d-flex justify-content-between">
+                            <span class="fw-bolder">Price</span>
+                            <a href="#" class="btn btn-dark">Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="card" style="width: 18rem;">
+                    <img src="./img/cinema.jpg" class="card-img-top" alt="Cine">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Cine</h5>
+                        <p class="card-text">Descripcion del Cine. Descripcion del Cine. Descripcion del Cine</p>
+                        <div class="d-flex justify-content-between">
+                            <span class="fw-bolder">Price</span>
+                            <a href="#" class="btn btn-dark">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="card" style="width: 18rem;">
+                    <img src="./img/costume_party.jpg" class="card-img-top" alt="Fiesta">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Fiesta disfraces</h5>
+                        <p class="card-text">Descripcion de la fiesta de disfreces. Descripcion de la fiesta de
+                            disfreces</p>
+                        <div class="d-flex justify-content-between">
+                            <span class="fw-bolder">Price</span>
+                            <a href="#" class="btn btn-dark">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 4 -->
+                <div class="card" style="width: 18rem;">
+                    <img src="./img/music_concert.jpg" class="card-img-top" alt="Concierto">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Concierto</h5>
+                        <p class="card-text">Descripcion de los conciertos. Descripcion de los conciertos. Descripcion
+                            de los conciertos</p>
+                        <div class="d-flex justify-content-between">
+                            <span class="fw-bolder">Price</span>
+                            <a href="#" class="btn btn-dark">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
+
+<footer>
+    <nav class="navbar bg-dark">
+        <div class="container">
+          <a class="" href="#">
+            <img src="./img/facebook.png" alt="facebook" width="35" height="35">
+          </a>
+          <a  href="#">
+            <img src="./img/instagram.png" alt="instagram" width="35" height="35">
+          </a>
+          <a class="" href="#">
+            <img src="./img/whatsapp.png" alt="whatsapp" width="35" height="35">
+          </a>
+        </div>
+        
+      </nav>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
