--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>UPCOMING EVENTS</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -34,10 +34,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link " aria-current="page" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./upcomingevents.html">UPCOMING EVENTS</a>
+                            <a class="nav-link active" href="#">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pastevents.html">PAST EVENTS</a>
@@ -74,31 +74,31 @@
                 <div class="carousel-item active ">
                     <img src="./img/optional_banner_1.jpg" class="d-block w-100" alt="Imagen comida">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_2.jpg" class="d-block w-100" alt="Imagen cine">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_3.jpg" class="d-block w-100" alt="Imagen terminal">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_4.jpg" class="d-block w-100" alt="Imagen fiesta">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_5.jpg" class="d-block w-100" alt="Imagen concierto">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
             </div>
