--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>CONTACT US</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -34,16 +34,16 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link " aria-current="page" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./upcomingevents.html">UPCOMING EVENTS</a>
+                            <a class="nav-link " href="./upcomingevents.html">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pastevents.html">PAST EVENTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">CONTACTS</a>
+                            <a class="nav-link active" href="#">CONTACTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./stats.html">STATS</a>
@@ -74,31 +74,31 @@
                 <div class="carousel-item active ">
                     <img src="./img/optional_banner_1.jpg" class="d-block w-100" alt="Imagen comida">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>CONTACT US</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_2.jpg" class="d-block w-100" alt="Imagen cine">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>CONTACT US</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_3.jpg" class="d-block w-100" alt="Imagen terminal">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>CONTACT US</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_4.jpg" class="d-block w-100" alt="Imagen fiesta">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>CONTACT US</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/optional_banner_5.jpg" class="d-block w-100" alt="Imagen concierto">
                     <div class="carousel-caption d-none d-md-block">
-                        <h2>HOME</h2>
+                        <h2>CONTACT US</h2>
                     </div>
                 </div>
             </div>
@@ -119,98 +119,33 @@
 
     <main>
 
-        <!-- BARRA DE BUSQUEDA -->
-        <nav class="navbar bg-dark  text-white">
-            <div class="container-fluid">
-                <div class="ms-3">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="categoria" value="categoria">
-                        <label class="form-check-label" for="categorua">Categoría</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="genero" value="genero">
-                        <label class="form-check-label" for="genero">Genero</label>
-                    </div>
-
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="filtro3" value="filtro3">
-                        <label class="form-check-label" for="filtro3">Filtro 3</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="filtro4" value="filtro4">
-                        <label class="form-check-label" for="filtro4">Filtro 4</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="filtro5" value="filtro5">
-                        <label class="form-check-label" for="filtro5">Filtro 5</label>
-                    </div>
-                </div>
-                <form class="d-flex me-4" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-
-        </nav>
-
-        <!-- CARDS -->
-        <div class="container mt-4 mb-4">
-            <div class="row justify-content-evenly">
-
-                <!-- Card 1 -->
-                <div class="card" style="width: 15rem;">
-                    <img src="./img/books.jpg" class="card-img-top" alt="Libros">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Libros</h5>
-                        <p class="card-text">Descripcion de los Libros. Descripcion de los Libros. Descripcion de los
-                            Libros</p>
-                        <div class="d-flex justify-content-between">
-                            <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Card 2 -->
-                <div class="card" style="width: 15rem;">
-                    <img src="./img/cinema.jpg" class="card-img-top" alt="Cine">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Cine</h5>
-                        <p class="card-text">Descripcion del Cine. Descripcion del Cine. Descripcion del Cine</p>
-                        <div class="d-flex justify-content-between">
-                            <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Card 3 -->
-                <div class="card" style="width: 15rem;">
-                    <img src="./img/costume_party.jpg" class="card-img-top" alt="Fiesta">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Fiesta disfraces</h5>
-                        <p class="card-text">Descripcion de la fiesta de disfreces. Descripcion de la fiesta de
-                            disfreces</p>
-                        <div class="d-flex justify-content-between">
-                            <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Card 4 -->
-                <div class="card" style="width: 15rem;">
-                    <img src="./img/music_concert.jpg" class="card-img-top" alt="Concierto">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">Concierto</h5>
-                        <p class="card-text">Descripcion de los conciertos. Descripcion de los conciertos. Descripcion
-                            de los conciertos</p>
-                        <div class="d-flex justify-content-between">
-                            <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
-                        </div>
-                    </div>
+        <!-- FORMULARIO -->
+        <div class="container my-3 py-3 w-50 border border-2 rounded-1 bg-body-tertiary">
+            <div class="row">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
                 </div>
             </div>
-        </div>
 
+            <div class="row">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="su-email@example.com">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje:</label>
+                    <textarea class="form-control" id="mensaje" rows="3"></textarea>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-dark">Enviar</button>
+            </div>
+        </div>
     </main>
 
     <footer>
