--- a/stats.html
+++ b/stats.html
@@ -120,15 +120,15 @@
     <main>
 
         <!-- TABLA -->
-        <div class="container my-3 py-2 border border-dark-subtle border-2 rounded">
-            <table class="table">
-                <thead>
+        <div class="container my-3 py-2 border border-dark border-2 rounded">
+            <table class="table table-hover">
+                <thead class="table-dark">
                     <tr>
-                        <th scope="col" colspan="3" class="table-dark">Event Statics</th>
+                        <th scope="col" colspan="3" >Event Statics</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="">
+                    <tr class=" ">
                         <th>Events with highest % of assistance</th>
                         <th>Events with lowest % of assistance</th>
                         <th>Events with larger capacity</th>
@@ -146,9 +146,9 @@
                     </tr>
 
                 </tbody>
-                <thead>
+                <thead class="table-dark">
                     <tr>
-                        <th scope="col" colspan="3" class="table-dark">Upcoming events statistics by category</th>
+                        <th scope="col" colspan="3">Upcoming events statistics by category</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -171,9 +171,9 @@
 
                 </tbody>
 
-                <thead>
+                <thead class="table-dark">
                     <tr>
-                        <th scope="col" colspan="3" class="table-dark">Upcoming events statistics by category</th>
+                        <th scope="col" colspan="3">Upcoming events statistics by category</th>
                     </tr>
                 </thead>
                 <tbody>
