--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -72,13 +72,13 @@
             <!-- imagenes del carrusel -->
             <div class="carousel-inner">
                 <div class="carousel-item active ">
-                    <img src="./img/optional_banner_1.jpg" class="d-block w-100" alt="Imagen comida">
+                    <img src="./img/optional_banner_2.jpg" class="d-block w-100" alt="Imagen cine">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>UPCOMING EVENTS</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/optional_banner_2.jpg" class="d-block w-100" alt="Imagen cine">
+                    <img src="./img/optional_banner_1.jpg" class="d-block w-100" alt="Imagen comida">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>UPCOMING EVENTS</h2>
                     </div>
@@ -165,7 +165,7 @@
                             Libros</p>
                         <div class="d-flex justify-content-between">
                             <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
+                            <a href="./details.html" class="btn btn-dark">Details</a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                         <p class="card-text">Descripcion del Cine. Descripcion del Cine. Descripcion del Cine</p>
                         <div class="d-flex justify-content-between">
                             <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
+                            <a href="./details.html" class="btn btn-dark">Details</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                             disfreces</p>
                         <div class="d-flex justify-content-between">
                             <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
+                            <a href="./details.html" class="btn btn-dark">Details</a>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             de los conciertos</p>
                         <div class="d-flex justify-content-between">
                             <span class="fw-bolder">Price</span>
-                            <a href="#" class="btn btn-dark">Details</a>
+                            <a href="./details.html" class="btn btn-dark">Details</a>
                         </div>
                     </div>
                 </div>
