Se modifica dinamicamente el carrusel de Home

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <!-- CARRUSEL -->
         <div id="carouselExampleIndicators" class="carousel slide">
             <!-- Botones bajos del carrusel -->
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            <div id="botoneraCarrusel" class="carousel-indicators">
+<!--                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
@@ -66,12 +66,12 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+                    aria-label="Slide 5"></button> -->
             </div>
 
             <!-- imagenes del carrusel -->
-            <div class="carousel-inner">
-                <div class="carousel-item active ">
+            <div id="carrusel" class="carousel-inner">
+               <!--  <div class="carousel-item active ">
                     <img src="./img/optional_banner_5.jpg" class="d-block w-100" alt="Imagen concierto">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>HOME</h2>
@@ -100,7 +100,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>HOME</h2>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <!-- Botones next y previous del carrusel. -->
