Se termina index y details Spring 3

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     <!-- Aca se insertan dinamicamente los checkbox -->
                 </div>
                 <form class="d-flex me-4" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <input id="serchBar" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <!-- <button class="btn btn-outline-success" type="submit">Buscar</button> -->
                 </form>
 
         </nav>
