--- a/details.html
+++ b/details.html
@@ -122,21 +122,8 @@
         <!-- CARD -->
         <div class="container my-5 mx-5">
             <div class="row justify-content-center">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0 align-items-center">
-                  <div class="col-md-4">
-                    <img src="./img/outing_to_the_museum.jpg" class="img-fluid rounded-start" alt="imagen museo">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title text-center mb-0">Título</h5>
-                      <p class="card-text mb-0">Event data..............................................</p>
-                      <p class="card-text mb-0">Event data..............................................</p>
-                      <p class="card-text mb-0">Event data..............................................</p>
-                   
-                    </div>
-                  </div>
-                </div>
+            <div id="tarjetaDetallada" class="card mb-3" style="max-width: 540px;">
+               <!-- Aqui se carga la tarjeta de manera dinamica -->
               </div>
             </div>
         </div>
@@ -169,6 +156,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+        <script src="./js/data.js"></script>
+        <script src="./js/details.js"></script>
 </body>
 
 </html>
