Se completa tabla statics

--- a/stats.html
+++ b/stats.html
@@ -124,7 +124,7 @@
             <table class="table table-hover">
                 <thead class="table-dark">
                     <tr>
-                        <th scope="col" colspan="3" >Event Statics</th>
+                        <th scope="col" colspan="3">Event Statics</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -134,15 +134,8 @@
                         <th>Events with larger capacity</th>
                     </tr>
 
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
-                    </tr>
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
+                    <tr id="tablaStatics">
+                        <!-- Info dinamica de Estadisticas -->
                     </tr>
 
                 </tbody>
@@ -226,6 +219,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <script src="./js/stats.js"></script>
 </body>
 
 </html>
