Tabla casi lista. Solo falta upcoming events statics

--- a/stats.html
+++ b/stats.html
@@ -141,26 +141,12 @@
                 </tbody>
                 <thead class="table-dark">
                     <tr>
-                        <th scope="col" colspan="3">Upcoming events statistics by category</th>
+                        <th scope="col" colspan="3">Past events statistics by category</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr class="">
-                        <th>Categories</th>
-                        <th>Revenues</th>
-                        <th>Percentage of assitance</th>
-                    </tr>
+                <tbody id="tablaPastStatics">
 
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
-                    </tr>
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
-                    </tr>
+                    <!-- Info dinamica de Estadisticas -->
 
                 </tbody>
 
