--- a/stats.html
+++ b/stats.html
@@ -68,7 +68,6 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
             </div>
-
             <!-- imagenes del carrusel -->
             <div class="carousel-inner">
                 <div class="carousel-item active ">
@@ -145,9 +144,7 @@
                     </tr>
                 </thead>
                 <tbody id="tablaPastStatics">
-
                     <!-- Info dinamica de Estadisticas -->
-
                 </tbody>
 
                 <thead class="table-dark">
@@ -155,23 +152,9 @@
                         <th scope="col" colspan="3">Upcoming events statistics by category</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr class="">
-                        <th>Categories</th>
-                        <th>Revenues</th>
-                        <th>Percentage of assitance</th>
-                    </tr>
+                <tbody id="tablaFutureStatics">
 
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
-                    </tr>
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 2</td>
-                    </tr>
+                    <!-- Info dinamica de Estadisticas -->
 
                 </tbody>
             </table>
